manifest/kube-system.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
---
# apiVersion: argoproj.io/v1alpha1
# kind: Application
# metadata:
#   name: coredns
#   namespace: argocd
# spec:
#   destination:
#     namespace: kube-system
#     server: https://kubernetes.default.svc
#   project: homelab
#   source:
#     chart: coredns
#     repoURL: https://coredns.github.io/helm
#     targetRevision: 1.36.1
#     helm:
#       valuesObject:
#         fullnameOverride: coredns
#         replicaCount: 1
#         k8sAppLabelOverride: kube-dns
#         service:
#           name: kube-dns
#           clusterIP: "10.43.0.10"
#         serviceAccount:
#           create: true
#         deployment:
#           annotations:
#             reloader.stakater.com/auto: "true"
#         servers:
#           - zones:
#               - zone: .
#                 scheme: dns://
#                 use_tcp: true
#             port: 53
#             plugins:
#               - name: log
#               - name: errors
#               - name: health
#                 configBlock: |-
#                   lameduck 5s
#               - name: ready
#               - name: kubernetes
#                 parameters: cluster.local in-addr.arpa ip6.arpa
#                 configBlock: |-
#                   pods insecure
#                   fallthrough in-addr.arpa ip6.arpa
#                   ttl 30
#               - name: prometheus
#                 parameters: 0.0.0.0:9153
#               - name: forward
#                 parameters: . /etc/resolv.conf
#               - name: cache
#                 parameters: 30
#               - name: loop
#               - name: reload
#               - name: loadbalance
#         affinity:
#           nodeAffinity:
#             requiredDuringSchedulingIgnoredDuringExecution:
#               nodeSelectorTerms:
#                 - matchExpressions:
  #                   - key: node-role.kubernetes.io/control-plane
  #                     operator: Exists
  #       tolerations:
  #         - key: CriticalAddonsOnly
  #           operator: Exists
  #         - key: node-role.kubernetes.io/control-plane
  #           operator: Exists
  #           effect: NoSchedule
  #         - key: node-role.kubernetes.io/master
  #           operator: Exists
  #           effect: NoSchedule
  #       topologySpreadConstraints:
  #         - maxSkew: 1
  #           topologyKey: kubernetes.io/hostname
  #           whenUnsatisfiable: DoNotSchedule
  #           labelSelector:
  #             matchLabels:
  #               app.kubernetes.io/instance: coredns
  # syncPolicy:
  #   automated:
  #     allowEmpty: true
  #     prune: true
  #     selfHeal: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-http
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: hubble.<path:stringreplacesecret#domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-grpc
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: hubble.<path:stringreplacesecret#domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hubble.<path:stringreplacesecret#domain>"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
